--- a/Assets/style.css
+++ b/Assets/style.css
@@ -16,3 +16,17 @@
 .yellow {
     background-color: yellow;
 }
+
+nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    padding: 30px;
+    background-color: blue;
+    color: white;
+}
+
+li {
+    display: flex;
+}
